--- a/MarsRealEstate-Starter/app/src/main/res/layout/fragment_detail.xml
+++ b/MarsRealEstate-Starter/app/src/main/res/layout/fragment_detail.xml
@@ -57,7 +57,8 @@
                 android:textSize="39sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/main_photo_image"
-                tools:text="To Rent" />
+                tools:text="To Rent"
+                android:text="@{viewModel.dsiplayPropertyType}"/>
 
             <TextView
                 android:id="@+id/price_value_text"
@@ -68,7 +69,8 @@
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/property_type_text"
-                tools:text="$100,000" />
+                tools:text="$100,000"
+                android:text="@{viewModel.displayPropertyPrice}"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
